updating OpenAPI definition: /entry...
